src/app/globals.scss
@import "tailwindcss";

:root {
  --background: #FAF2F2;
  --foreground: #1B1B19;
  --spacing: 10px;
  --main-color: #00A2AD;
  --sfumatura-1: linear-gradient(90deg,#00A2AD, #005157, #000000 70%);
  --sfumatura-2: linear-gradient(#FAF2F200, #FAF2F2);

}

*{box-sizing: border-box;}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-primary: var(--main-color);
  --font-aspekta: var(--font-aspekta);
  --spacing: var(--spacing);

  //responsive
  --breakpoint-2xl: 2000px;
  --breakpoint-xl: 1500px;
  --breakpoint-l: 1250px;
  --breakpoint-mobileHeader:1100px;
  --breakpoint-m: 1025px;
  --breakpoint-s: 768px;
  --breakpoint-xs: 501px;
  --breakpoint-xxs: 400px;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-aspekta);
  font-size: 18px;
  line-height: 24px;
  overflow-x: hidden;
  max-width: 100vw;
  overflow-y: hidden;
}


.font-aspekta{
  font-family: var(--font-aspekta);
}



//utils
a{text-decoration: none;}
h1, .h1{font-size: 80px; line-height: 90px; color: var(--main-color); margin: 0;}
h2, .h2{font-size: 38px; line-height: 100%; margin: 0;}
h3, .h3{font-size: 30px; line-height: 35px; text-transform: unset; margin: 0; font-weight: 600; &.sub{font-weight: 400;}}
p{margin: 0;}
.classic-title{font-size: 40px; line-height: 50px; font-weight: 700; color: var(--main-color);}
.boxed{padding-left: 76px; padding-right: 76px;}
.big-boxed{padding-left: 210px; padding-right: 210px;}

.divisor{width: 100%; height: 1px; background-color: var(--foreground); display: block;}
.pin-spacer{z-index: 10 !important;}

.sfumatura-1{background: var(--sfumatura-1);}
.sfumatura-2{background: var(--sfumatura-2);}

.sfumatura-dark{background: linear-gradient(#1B1B1900, #1B1B19);}
.fade-effect{opacity: 0;}


.video-carousel-section .video-carousel-cards{
    .swiper-wrapper{
        align-items: stretch; 
        .swiper-slide{border-radius: 5px; overflow: hidden;}
        .plyr{
            &.plyr--paused .plyr__controls{display: none;}
        }
    } 
}

.formWrapper form .formFields .singleField{
  &.hidden_label .labelContainer{display: none;}
  &.notValid{
    .inputContainer{
      display: flex; flex-direction: column; align-items: flex-start; gap: 5px;
      input:not(input[type="checkbox"]), select, textarea{
        border: 2px solid red;
      }
      .errorLabel{
        font-size: 13px; line-height: 15px; margin-left: 15px;
      }
    }
    &.type-consent{
      .inputContainer{
        flex-direction: row; align-items: center;
        .errorLabel{font-size: 13px; line-height: 15px; color: red; margin-left: 5px;}
      }
    }
  }
}

.product-image{
  position: relative;
  &::before{content: ''; position: absolute; bottom: 35%; left: 0; width: 100%; height: 65%; background: linear-gradient(#FAF2F2, #d1d1d1); z-index: -1;}
  &::after{content: ''; position: absolute; bottom: 0; left: 0; width: 100%; height: 35%; background-color: #fff; z-index: -1;}
  &.product-image-card{
    &::before{height: 150px; bottom: calc(100% - 230px); background: linear-gradient(#FAF2F2, #ebebeb);}
    &::after{background-color: #FAF2F2; z-index: -1; height: calc(100% - 230px);}
  }
}

// .shaded{
//   position: relative; margin-bottom: -250px;
//   &::after{content: ''; position: absolute; bottom: 0; left: 0; width: 100%; height: 250px; background: var(--sfumatura-2); z-index: 1;}
//   &.reverse::after{transform: rotate(180deg);}
// }
.gradient-before{
  position: relative;
  &::before{content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 250px; background: linear-gradient(#fff, #FAF2F2); z-index: -1;}
}

.testata-product{
  background: linear-gradient(0deg, #D2D3D4 0%, #D5D6D8 14%, #D5D5D5 34.13%, #8E8E8E 47.12%, #646465 65.38%, #2B2B2B 100%);
}

@media only screen and (max-width: 1500px){
  .big-boxed{padding-left: 76px; padding-right: 76px;}
  h1, .h1{font-size: 70px; line-height: 80px;}
  h2, .h2{font-size: 32px;}
}


@media only screen and (max-width: 1025px){
  .big-boxed, .boxed{padding-left: 5vw; padding-right: 5vw;}
  h1, .h1{font-size: 60px; line-height: 70px;}
  h2, .h2{font-size: 35px;}
  h3, .h3{font-size: 27px; line-height: 32px;}
}

@media only screen and (max-width:768px){
  h1, .h1{font-size: 40px; line-height: 45px;}
  h2, .h2{font-size: 30px;}
  h3, .h3{font-size: 24px; line-height: 30px;}
  .classic-title{font-size: 35px; line-height: 40px;}
}

